[package]
name = "discord-echo"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "AGPL-3.0-only"
description = "Discord text integration for echo-system entities"
repository = "https://github.com/dnacenta/discord-echo"

[dependencies]
pulse-system-types = { git = "https://github.com/dnacenta/pulse-null-types", branch = "main" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
